Adds feature that displays the name of the poll item creator when that has been enabled for the poll.

--- a/src/app/poll-option-dialog/poll-option-dialog.component.html
+++ b/src/app/poll-option-dialog/poll-option-dialog.component.html
@@ -11,10 +11,10 @@
     </mat-card>
   </ng-container>
   <ng-container *ngIf="pollItem.movieId">
-    <movie-poll-item [pollItem]="pollItem"></movie-poll-item>
+    <movie-poll-item [pollItem]="pollItem" [showCreator]="pollItem.creator"></movie-poll-item>
   </ng-container>
   <ng-container *ngIf="pollItem.seriesId">
-    <series-poll-item [pollItem]="pollItem"></series-poll-item>
+    <series-poll-item [pollItem]="pollItem" [showCreator]="pollItem.creator"></series-poll-item>
   </ng-container>
 </div>
 
