--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -8,6 +8,7 @@
     <mat-slide-toggle [(ngModel)]="poll.seriesPoll" (change)="changeSeriesPollState($event)" matTooltip="Create a poll of TV series">TV Series poll</mat-slide-toggle>
     <mat-slide-toggle [(ngModel)]="poll.selectMultiple" matTooltip="Allow users to vote for multiple choices">Allow voting for multiple options</mat-slide-toggle>
     <mat-slide-toggle [(ngModel)]="poll.allowAdd" matTooltip="Allow users to add their preferred options to the poll">Allow adding of options</mat-slide-toggle>
+    <mat-slide-toggle [(ngModel)]="poll.showPollItemCreators" matTooltip="Show creators of individual poll items">Show poll item creators</mat-slide-toggle>
     <!-- <mat-slide-toggle [(ngModel)]="poll.allowRandomDraw" matTooltip="Allow drawing a random option">Allow random option draw</mat-slide-toggle> -->
   </div>
   <mat-form-field class="full-width" style="margin-top: 17px;">
