--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -33,6 +33,7 @@
       <div class="show-more" (click)="shortened = !shortened">{{ shortened ? 'Show more info' : 'Show less' }}</div>
     </div>
     <div class="controls" *ngIf="removable || voteable">
+      <span class="creator" *ngIf="showCreator && pollItem?.creator?.name">{{ pollItem.creator.name }}</span>
       <mat-icon *ngIf="removable" class="close" (click)="remove(pollItem)" style="cursor: pointer;">close</mat-icon>
       <voter *ngIf="voteable" [pollItem]="pollItem" [hasVoted]="hasVoted" (onClick)="clicked(pollItem)"></voter>
     </div>
