--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,10 +1,10 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 $custom-primary-palette: (
     50 : #ffeef3,
@@ -72,19 +72,19 @@ $custom-primary-dark-palette: (
     )
 );
 
-$app-primary: mat-palette($custom-primary-palette, 700, 300, 900);
-$app-accent:  mat-palette($mat-cyan, A200, A100, A400);
-$app-warn:    mat-palette($mat-red);
-$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+$app-primary: mat.define-palette($custom-primary-palette, 700, 300, 900);
+$app-accent:  mat.define-palette(mat.$cyan-palette, A200, A100, A400);
+$app-warn:    mat.define-palette(mat.$red-palette);
+$app-theme: mat.define-light-theme($app-primary, $app-accent, $app-warn);
 
-@include angular-material-theme($app-theme);
+@include mat.all-component-themes($app-theme);
 
 // Define an alternate dark theme.
-$app-dark-primary: mat-palette($custom-primary-dark-palette, 700, 300, 900);
-$app-dark-accent:  mat-palette($mat-amber, A200, A100, A400);
-$app-dark-warn:    mat-palette($mat-deep-orange);
-$app-dark-theme:   mat-dark-theme($app-primary, $app-accent, $app-warn);//mat-dark-theme($app-dark-primary, $app-dark-accent, $app-dark-warn);
+$app-dark-primary: mat.define-palette($custom-primary-dark-palette, 700, 300, 900);
+$app-dark-accent:  mat.define-palette(mat.$amber-palette, A200, A100, A400);
+$app-dark-warn:    mat.define-palette(mat.$deep-orange-palette);
+$app-dark-theme:   mat.define-dark-theme($app-primary, $app-accent, $app-warn);//mat-dark-theme($app-dark-primary, $app-dark-accent, $app-dark-warn);
 
 .dark-theme {
-  @include angular-material-theme($app-dark-theme);
+  @include mat.all-component-themes($app-dark-theme);
 }
